@@ -6,6 +6,7 @@
 	* Source/NSArray.m: Use new plist code
 	* Source/NSData.m: ditto
 	* Source/NSDictionary.m: ditto
+	* Source/NSSerializer.m: handle NSNumber and NSDate
 	* Source/NSString.m: ditto, plus implement extensions to old plist
 	support so we can encode NSNumber and NSDate values.
 	Remove GNUstep property list extensions from the api ... make more
